# transdocs

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
app/: __init__.py  main.py
app/api/: dependencias.py  router.py
app/aplicacao/: __init__.py
app/core/: __init__.py  configuracao.py  erros.py  observabilidade.py
app/dominio/: __init__.py  arquivos.py  audio.py  autenticacao.py  custos_ia.py  documentos.py  falhas.py  negociacao.py  preenchimentos.py  sugestoes.py
app/infraestrutura/: __init__.py
docs/: ARQUITETURA_E_FLUXO.md  DEPLOY_RAILWAY.md  PLANO_IMPLEMENTACAO.md  PRIVACIDADE_E_RETENCAO.md  SUPABASE_COMPARTILHADO.md
scripts/: criar_modelo_escritura_estruturada.py
supabase/migrations/: 001_schema_inicial.sql  20260714000100_schema_inicial.sql  20260715020000_busca_dados_extraidos.sql  20260715040000_primeira_pagina_metricas.sql  20260715060000_sugestoes.sql  20260715130000_preenchimentos.sql  20260715183000_narrativa_negociacao.sql  20260715190000_biblioteca_modelos_preenchimento.sql  20260715213000_fluxo_escritura_assistida.sql  20260715233000_fontes_texto.sql  20260716010000_nucleo_financeiro.sql  20260716020000_dividas_e_planejamento.sql  (+59 more)
tests/: test_analise_registral.py  test_busca_documentos.py  test_configuracao.py  test_custos_ia.py  test_dados_principais.py  test_fontes_texto.py  test_leitor_pdf.py  test_modelos_preenchimento.py  test_negociacao.py  test_preenchimento_docx.py  test_preenchimento_edicao_manual.py  test_preenchimento_evidencias.py  test_sugestoes.py  test_transcricao_audio.py
(+36 files in other folders)
